# maala

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  cmake.sh  format.sh  hello.cpp
core/include/: common.hpp  elimination.hpp  matrix.hpp  slicing.hpp  solver.hpp  twoPointBoundary.hpp
core/src/: elimination.cpp  matrix.cpp  slicing.cpp  solver.cpp  twoPointBoundary.cpp
exercises/include/: chapters.hpp
exercises/src/: chapter1.cpp  main.cpp
include/: common.hpp  config.hpp.in  elimination.hpp  matrix.hpp  solver.hpp
src/: elimination.cpp  main.cpp  matrix.cpp  solver.cpp
tests/include/: tests.hpp
tests/src/: main.cpp  tests.cpp
